<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <!-- <item
    android:id="@+id/serverName"
    android:title="@string/serverName"
    android:enabled="true"
    android:checkable="false"
    android:checked="false"
    android:visible="true"></item> -->
    
  <!-- <item android:title="@string/textSize" android:id="@+id/textSize"></item>  -->
  
  <item
    android:title="@string/recognitionThreshold"
    android:id="@+id/recognitionThreshold"></item> 
  <item
    android:id="@+id/silenceThreshold"
    android:title="@string/silenceThresholdItem"></item>
 <!--  <item
    android:enabled="true"
    android:checkable="true"
    android:id="@+id/saveSpeech" 
    android:title="@string/saveSpeech"
    android:checked="false"
    android:visible="true"></item> -->
  <!-- item
    android:enabled="true"
    android:checkable="true"
    android:id="@+id/dumpVoice"
    android:title="@string/dumpVoice"
    android:visible="true"
    android:checked="false"></item> -->
  <item
    android:checked="false"
    android:title="@string/javaScript"
    android:id="@+id/jsEnable"
    android:visible="true"
    android:enabled="true"
    android:checkable="true"></item>
  <item
    android:title="@string/testCommunications"
    android:id="@+id/commTest"></item>
  <item android:id="@+id/logout" android:title="@string/logout" android:visible="true" android:checkable="false" android:enabled="true"></item><item android:id="@+id/login" android:title="@string/login" android:visible="true" android:enabled="true"></item><item
    android:enabled="true"
    android:visible="true"
    android:title="@string/exit"
    android:checkable="false"
    android:id="@+id/exeunt"></item>
  
  
  




</menu>
