<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <RadioGroup
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" android:id="@+id/textSizeGroup">

    <RadioButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tinyTextSize"
      android:id="@+id/tinyText"></RadioButton>
    <RadioButton
      android:id="@+id/smallText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/smallTextSize"></RadioButton>
    <RadioButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/normalTextSize" android:id="@+id/normalText"></RadioButton>
    <RadioButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/largeTextSize" android:id="@+id/largeText"></RadioButton>
    <RadioButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/hugeTextSize" android:id="@+id/hugeText"></RadioButton>
  </RadioGroup>
</LinearLayout>
